<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello everyone, SIMFAC!</string>
    <string name="app_name">NORDIS</string>
    <string name="tipoped">selecione tipo pedido</string>
    <string name="txtDemo">SIMFAC by Osmar David Benavidez Zelaya | osmar.benavidez@gmail.com</string>

    <!-- Activity Titles -->
    <string name="HomeActivityTitle">SISTEMA MOVIL DE FACTURACIÓN</string>
    <string name="FeedbackActivityTitle">Feedback</string>
    <string name="ClientActivityTitle">SIMFAC | CLIENTE</string>
    <string name="ProductoActivityTitle">SIMFAC | PRODUCTO</string>
    <string name="PedidoActivityTitle">SIMFAC | PEDIDO</string>
    <string name="ReciboCollActivityTitle">SIMFAC | RECIBO COLECTOR</string>
    <string name="DevolucionActivityTitle">SIMFAC | DEVOLUCION</string>
    <string name="ConfiguracionActivityTitle">SIMFAC | CONFIGURACIÓN</string>

    <!-- Dialogs Titles -->
    <string name="FichaClienteDialogTitle">SIMFAC | FICHA CLIENTE</string>

    <!-- cliente.xml titles -->
    <string name="txtclient_tittle">LISTA CLIENTE</string>
    <string name="txtclient_entymessage">No hay Registros</string>
     
    
    <string name="action_settings">Settings</string> 
    <string name="edit_message">Enter a Message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_name">Main Activity</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="image_desc">Image Description</string>
    <string name="menu_name">Menu Name</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="descuento">% Descuento</string>
     <string name="justificacion">Justificación</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Buscar</string>
    <string name="fragment1">Fragment 1</string>
    <string name="fragment2">Fragment 2</string>
    <string name="fragment3">Fragment 3</string>
    <string name="drawer_open">Menú Abierto</string>
    <string name="drawer_close">Menú Cerrado</string>
    <string name="view_product_codigo">Código</string>
    <string name="view_product_producto">Producto:</string>
    <string name="view_product_proveedor">Proveedor:</string>
    <string name="view_product_nombregenerico">Nombre Genérico:</string>
    <string name="view_product_forma">Forma:</string>
    <string name="view_product_accion">Acción:</string>
    <string name="view_product_tipo">Tipo:</string>
    <string name="view_product_categoria">Categoría:</string>
    <string name="view_product_especialidades">Especialidades:</string>
    <string name="txtdocumentos_title">LISTA DE DOCUMENTOS</string>
    <string name="message_pay_amount">Ingrese el monto</string>
    <string name="message_ocational_discount">Aplicar Descuento Ocasional</string>
    <string name="txt_collectorpercent">% Vendedor</string>
    <string name="txt_ocational_discount_key">Clave</string>
    <string name="text_scan_devices">Buscar Dispositivos</string>
    <string name="txtbluetoothdevice_title">LISTA DISPOSITIVOS</string>
    <string name="title_listaproducto">Datos del Producto</string>
    <string name="notasproducto">Notas del Producto</string>
</resources>